Add example functionality
A simple hello world program, that is being compiled with typescript.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Yarn Berry ###
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -10,5 +11,11 @@
 !.yarn/cache
 #.pnp.*
 
-# IntelliJ
+### IntelliJ ###
 .idea
+
+### Build results ###
+bin
+build
+dist
+target
