--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
   "name": "yarn-build-cache",
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "dependencies": {
+    "@types/node": "^18.7.18",
+    "typescript": "^4.8.3"
+  },
+  "scripts": {
+    "build": "tsc",
+    "hello": "yarn node ./bin/index.js"
+  }
 }
