Move plugin and dummy project into their own workspaces

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,7 @@
 yarnPath: .yarn/releases/yarn-3.2.3.cjs
 
 plugins:
-  - ./bundles/@yarnpkg/plugin-build-cache.js
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+  - path: ./yarn-plugin-build-result-cache/bundles/@yarnpkg/plugin-build-result-cache.js
+    spec: "@yarnpkg/plugin-build-result-cache"
