--- a/build-result-cache-dummy-project/package.json
+++ b/build-result-cache-dummy-project/package.json
@@ -4,11 +4,13 @@
   "main": "src/index.ts",
   "devDependencies": {
     "@types/node": "^18.7.18",
+    "copyfiles": "^2.4.1",
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc",
-    "build-with-cache": "tsc",
+    "build": "tsc && yarn copy-non-ts-files",
+    "build-with-cache": "tsc && yarn copy-non-ts-files",
+    "copy-non-ts-files": "copyfiles -u 1 src/**/*.png bin/",
     "hello": "yarn node ./bin/index.js"
   }
 }
