--- a/build-result-cache-dummy-project/.build-result-cache-rc.json
+++ b/build-result-cache-dummy-project/.build-result-cache-rc.json
@@ -3,8 +3,8 @@
     {
       "scriptName": "build-with-cache",
       "inputIncludes": "**",
-      "inputExcludes": "**/bin/**",
-      "outputIncludes": "**/bin/**"
+      "inputExcludes": "bin/**",
+      "outputIncludes": "bin/**"
     }
   ]
 }
