--- a/yarn-plugin-build-result-cache/package.json
+++ b/yarn-plugin-build-result-cache/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rgischk/yarn-plugin-build-result-cache",
   "packageManager": "yarn@3.2.3",
+  "version": "0.0.1",
   "main": "./src/index.ts",
   "dependencies": {
     "@types/node": "^18.7.18",
