Add configuration options to enabled/disable caches

--- a/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
+++ b/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
@@ -7,5 +7,7 @@
       "outputIncludes": "build/**",
       "environmentVariableIncludes": "REACT_APP.*"
     }
-  ]
+  ],
+  "remoteCache": "http://localhost:1234/yarn-scripts-cache",
+  "remoteCacheUsage": "update-script-execution-result-only"
 }
