--- a/yarn-scripts-cache-dummy-lib/.yarn-scripts-cache-rc.json
+++ b/yarn-scripts-cache-dummy-lib/.yarn-scripts-cache-rc.json
@@ -6,5 +6,7 @@
       "inputExcludes": "bin/**",
       "outputIncludes": "bin/**"
     }
-  ]
+  ],
+  "remoteCache": "http://localhost:1234/yarn-scripts-cache",
+  "remoteCacheUsage": "update-script-execution-result-only"
 }
