--- a/yarn-plugin-scripts-cache/package.json
+++ b/yarn-plugin-scripts-cache/package.json
@@ -11,6 +11,7 @@
     "@yarnpkg/fslib": "^3.0.0-rc.18",
     "clipanion": "^3.2.0-rc.10",
     "glob": "^8.0.3",
+    "node-fetch": "^3.3.0",
     "typescript": "^4.8.3"
   },
   "scripts": {
