Refactoring: Move cache implementations into their own plugins using a custom hook

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -11,3 +11,7 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
   - path: ./yarn-plugin-scripts-cache/bundles/@yarnpkg/plugin-scripts-cache.js
     spec: "@yarnpkg/plugin-scripts-cache"
+  - path: ./yarn-plugin-scripts-cache-file/bundles/@yarnpkg/plugin-scripts-cache-file.js
+    spec: "@yarnpkg/plugin-scripts-cache-file"
+  - path: ./yarn-plugin-scripts-cache-nexus/bundles/@yarnpkg/plugin-scripts-cache-nexus.js
+    spec: "@yarnpkg/plugin-scripts-cache-nexus"
