--- a/packages/yarn-plugin-scripts-cache-file/package.json
+++ b/packages/yarn-plugin-scripts-cache-file/package.json
@@ -14,7 +14,9 @@
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "builder build plugin"
+    "check-types": "tsc --noEmit",
+    "build-only": "builder build plugin",
+    "build": "yarn run check-types && yarn run build-only"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
