Rework configuration options

--- a/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
@@ -8,6 +8,9 @@
       "environmentVariableIncludes": "REACT_APP.*"
     }
   ],
-  "remoteCache": "http://localhost:1234/yarn-scripts-cache",
-  "remoteCacheUsage": "update-script-execution-result-only"
+  "cacheConfigs": {
+    "nexus": {
+      "host": "http://localhost:8081"
+    }
+  }
 }
