--- a/packages/yarn-scripts-cache-api/package.json
+++ b/packages/yarn-scripts-cache-api/package.json
@@ -6,13 +6,11 @@
   "module": "bin/index.js",
   "types": "bin/index.d.ts",
   "devDependencies": {
+    "@types/node": "^18.7.18",
     "@yarnpkg/core": "^4.0.0-rc.18",
     "typescript": "^4.8.3"
   },
   "scripts": {
     "build": "tsc"
-  },
-  "dependencies": {
-    "@types/node": "^18.7.18"
   }
 }
