--- a/dummy-packages/yarn-scripts-cache-dummy-project/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-project/package.json
@@ -14,6 +14,6 @@
     "dummy-hello": "yarn node ./bin/index.js"
   },
   "dependencies": {
-    "@rgischk/yarn-scripts-cache-dummy-lib": "0.0.1"
+    "@rgischk/yarn-scripts-cache-dummy-lib": "workspace:*"
   }
 }
