--- a/dummy-packages/yarn-scripts-cache-dummy-app/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "homepage": ".",
   "dependencies": {
-    "@rgischk/yarn-scripts-cache-dummy-lib": "^0.0.1",
+    "@rgischk/yarn-scripts-cache-dummy-lib": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.0"
