--- a/packages/yarn-plugin-scripts-cache/package.json
+++ b/packages/yarn-plugin-scripts-cache/package.json
@@ -2,7 +2,21 @@
   "name": "@rgischk/yarn-plugin-scripts-cache",
   "packageManager": "yarn@3.2.3",
   "version": "1.0.2",
+  "description": "A Yarn Berry plugin to cache script execution results.",
   "main": "./src/index.ts",
+  "license": "MIT",
+  "author": "Roman Gischkowski <dev@rgischk.de",
+  "keywords": [
+    "yarn",
+    "berry",
+    "cache"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rgischk/yarn-scripts-cache.git",
+    "directory": "packages/yarn-plugin-scripts-cache"
+  },
+  "homepage": "https://github.com/rgischk/yarn-scripts-cache#readme",
   "scripts": {
     "check-types": "tsc --noEmit",
     "build-only": "builder build plugin",
