--- a/packages/yarn-scripts-cache-api/package.json
+++ b/packages/yarn-scripts-cache-api/package.json
@@ -2,15 +2,30 @@
   "name": "@rgischk/yarn-scripts-cache-api",
   "packageManager": "yarn@3.2.3",
   "version": "1.0.2",
+  "description": "API for yarn-scripts-cache.",
   "main": "bin/index.js",
   "module": "bin/index.js",
   "types": "bin/index.d.ts",
+  "license": "MIT",
+  "author": "Roman Gischkowski <dev@rgischk.de",
+  "keywords": [
+    "yarn",
+    "berry",
+    "cache"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rgischk/yarn-scripts-cache.git",
+    "directory": "packages/yarn-scripts-cache-api"
+  },
+  "homepage": "https://github.com/rgischk/yarn-scripts-cache#readme",
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@yarnpkg/core": "^4.0.0-rc.18",
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "yarn npm publish --access public"
   }
 }
