Upgrade yarn to latest stable release

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,10 +1,8 @@
-yarnPath: .yarn/releases/yarn-3.2.3.cjs
-
 packageExtensions:
   chalk@*:
     dependencies:
-      "#ansi-styles": npm:ansi-styles@6.1.0
-      "#supports-color": npm:supports-color@9.2.2
+      "#ansi-styles": "npm:ansi-styles@6.1.0"
+      "#supports-color": "npm:supports-color@9.2.2"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
@@ -15,3 +13,5 @@ plugins:
     spec: "@yarnpkg/plugin-scripts-cache-file"
   - path: ./packages/yarn-plugin-scripts-cache-nexus/bundles/@yarnpkg/plugin-scripts-cache-nexus.js
     spec: "@yarnpkg/plugin-scripts-cache-nexus"
+
+yarnPath: .yarn/releases/yarn-3.4.1.cjs
