--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,5 +13,7 @@ plugins:
     spec: "@yarnpkg/plugin-scripts-cache-file"
   - path: ./packages/yarn-plugin-scripts-cache-nexus/bundles/@yarnpkg/plugin-scripts-cache-nexus.js
     spec: "@yarnpkg/plugin-scripts-cache-nexus"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
 
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
