--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,10 @@ packageExtensions:
     dependencies:
       "#ansi-styles": "npm:ansi-styles@6.1.0"
       "#supports-color": "npm:supports-color@9.2.2"
+  eslint-config-react-app@7.0.1:
+    dependencies:
+      "@babel/plugin-syntax-flow": "npm:@babel/plugin-syntax-flow@^7.14.5"
+      "@babel/plugin-transform-react-jsx": "npm:@babel/plugin-transform-react-jsx@^7.14.9"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
