--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -19,5 +19,7 @@ plugins:
     spec: "@yarnpkg/plugin-scripts-cache-nexus"
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
