--- a/packages/yarn-plugin-scripts-cache-nexus/package.json
+++ b/packages/yarn-plugin-scripts-cache-nexus/package.json
@@ -5,7 +5,7 @@
   "description": "Cache implementation for yarn-scripts-cache using a remote sonatype nexus repository.",
   "main": "./src/index.ts",
   "license": "MIT",
-  "author": "Roman Gischkowski <dev@rgischk.de",
+  "author": "Roman Gischkowski <roman.gischkowski@encoway.de>",
   "keywords": [
     "yarn",
     "berry",
@@ -13,10 +13,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rgischk/yarn-scripts-cache.git",
+    "url": "https://github.com/encoway/yarn-scripts-cache.git",
     "directory": "packages/yarn-plugin-scripts-cache-nexus"
   },
-  "homepage": "https://github.com/rgischk/yarn-scripts-cache#readme",
+  "homepage": "https://github.com/encoway/yarn-scripts-cache#readme",
   "scripts": {
     "check-types": "tsc --noEmit",
     "build-only": "builder build plugin",
