Fix nexus plugin
The plugin did not work with yarn 4. I downgraded node-fetch as the latest version did not work for me.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -17,5 +17,7 @@ plugins:
     spec: "@yarnpkg/plugin-scripts-cache"
   - path: ./packages/yarn-plugin-scripts-cache-file/bundles/@yarnpkg/plugin-scripts-cache-file.js
     spec: "@yarnpkg/plugin-scripts-cache-file"
+  - path: ./packages/yarn-plugin-scripts-cache-nexus/bundles/@yarnpkg/plugin-scripts-cache-nexus.js
+    spec: "@yarnpkg/plugin-scripts-cache-nexus"
 
 yarnPath: .yarn/releases/yarn-4.1.0.cjs
