--- a/packages/yarn-plugin-scripts-cache-nexus/package.json
+++ b/packages/yarn-plugin-scripts-cache-nexus/package.json
@@ -24,9 +24,10 @@
   "devDependencies": {
     "@rgischk/yarn-scripts-cache-api": "workspace:*",
     "@types/node": "^18.18.6",
+    "@types/node-fetch": "^2.6.11",
     "@yarnpkg/builder": "^4.0.0",
     "@yarnpkg/core": "^4.0.3",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "typescript": "^5.2.2"
   }
 }
