Add new config option to clear directories before restoring a cache entry. This new option ensures that no previously existing files will remain in the directory being restored.

--- a/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json
@@ -5,6 +5,7 @@
       "inputIncludes": "**",
       "inputExcludes": "build/**",
       "outputIncludes": "build/**",
+      "clearBeforeRestore": "build",
       "environmentVariableIncludes": "REACT_APP.*"
     }
   ],
