--- a/dummy-packages/yarn-scripts-cache-dummy-project/.yarn-scripts-cache-rc.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-project/.yarn-scripts-cache-rc.json
@@ -4,7 +4,8 @@
       "scriptName": "dummy-build",
       "inputIncludes": "**",
       "inputExcludes": "bin/**",
-      "outputIncludes": "bin/**"
+      "outputIncludes": "bin/**",
+      "clearBeforeRestore": "bin"
     }
   ],
   "cacheConfigs": {
