--- a/packages/yarn-plugin-scripts-cache/package.json
+++ b/packages/yarn-plugin-scripts-cache/package.json
@@ -29,6 +29,7 @@
     "@yarnpkg/core": "^4.0.3",
     "@yarnpkg/fslib": "^3.0.2",
     "glob": "^10.3.10",
+    "json5": "^2.2.3",
     "typescript": "^5.2.2"
   }
 }
