--- a/dummy-packages/yarn-scripts-cache-dummy-app/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/package.json
@@ -1,45 +1,30 @@
 {
   "name": "@rgischk/yarn-scripts-cache-dummy-app",
   "version": "4.4.0",
-  "homepage": ".",
+  "type": "module",
   "dependencies": {
     "@rgischk/yarn-scripts-cache-dummy-lib": "workspace:*",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "web-vitals": "^3.5.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^18.19.62",
+    "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/testing-library__jest-dom": "^6.0.0",
-    "jest": "^29.7.0",
-    "react-scripts": "5.0.1",
-    "serve": "^14.2.4",
-    "typescript": "^5.6.3"
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10"
   },
   "scripts": {
-    "dummy-start": "react-scripts start",
-    "dummy-build": "react-scripts build",
-    "dummy-test": "react-scripts test",
-    "dummy-serve": "serve -s build",
+    "dummy-start": "vite",
+    "dummy-build": "tsc -b && vite build",
+    "dummy-lint": "eslint .",
+    "dummy-serve": "vite preview",
     "dummy-echo": "echo Hello World!"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
