--- a/dummy-packages/yarn-scripts-cache-dummy-lib2/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-lib2/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@rgischk/yarn-scripts-cache-dummy-lib2",
-  "main": "bin/index.js",
-  "module": "bin/index.js",
-  "types": "bin/index.d.ts",
+  "type": "module",
+  "exports": "./bin/index.js",
   "version": "4.4.0",
   "devDependencies": {
     "@types/node": "^18.19.62",
