--- a/dummy-packages/yarn-scripts-cache-dummy-app/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "typescript": "^5.6.3",
+    "typescript": "~5.7.3",
     "typescript-eslint": "^8.12.2",
     "vite": "^5.4.10"
   },
