--- a/dummy-packages/yarn-scripts-cache-dummy-lib/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-lib/package.json
@@ -5,7 +5,7 @@
   "version": "4.7.0",
   "devDependencies": {
     "@types/node": "^22.13.0",
-    "typescript": "^5.6.3"
+    "typescript": "~5.7.3"
   },
   "scripts": {
     "dummy-build": "tsc"
