--- a/dummy-packages/yarn-scripts-cache-dummy-project/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-project/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@types/node": "^22.13.0",
     "copyfiles": "^2.4.1",
-    "typescript": "^5.6.3"
+    "typescript": "~5.7.3"
   },
   "scripts": {
     "dummy-build": "tsc && yarn dummy-copy-non-ts-files",
