--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "jest": "^29.7.0",
-    "rimraf": "^5.0.10"
+    "rimraf": "^5.0.10",
+    "typescript": "~5.7.3"
   }
 }
