--- a/packages/yarn-plugin-scripts-cache-file/package.json
+++ b/packages/yarn-plugin-scripts-cache-file/package.json
@@ -27,6 +27,6 @@
     "@yarnpkg/builder": "^4.2.0",
     "@yarnpkg/core": "^4.1.4",
     "@yarnpkg/fslib": "^3.1.0",
-    "typescript": "^5.6.3"
+    "typescript": "~5.7.3"
   }
 }
