--- a/packages/yarn-plugin-scripts-cache/package.json
+++ b/packages/yarn-plugin-scripts-cache/package.json
@@ -30,6 +30,6 @@
     "@yarnpkg/fslib": "^3.1.0",
     "glob": "^10.4.5",
     "json5": "^2.2.3",
-    "typescript": "^5.6.3"
+    "typescript": "~5.7.3"
   }
 }
