--- a/packages/yarn-scripts-cache-api/package.json
+++ b/packages/yarn-scripts-cache-api/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@types/node": "^22.13.0",
     "@yarnpkg/core": "^4.1.4",
-    "typescript": "^5.6.3"
+    "typescript": "~5.7.3"
   },
   "scripts": {
     "build": "tsc",
