--- a/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json5
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json5
@@ -1,21 +1,21 @@
 {
-  "scriptsToCache": [
-    {
-      "scriptName": "dummy-build",                 // Wrap around the script called "dummy-build"
-      "inputIncludes": "**",                       // Consider all files when checking for changes
-      "inputExcludes": "dist/**",                  // Except for those files located in the "build" directory
-      "outputIncludes": "dist/**",                 // Copy and restore all files in the "build" directory
-      "clearBeforeRestore": "dist",                // Clear the "build" directory before restoring from the cache
-      "environmentVariableIncludes": "VITE.*"      // Rebuild when any environment variable with the prefix "VITE" changes
+    scriptsToCache: [
+        {
+            scriptName: "dummy-build", // Wrap around the script called "dummy-build"
+            inputIncludes: "**", // Consider all files when checking for changes
+            inputExcludes: "dist/**", // Except for those files located in the "build" directory
+            outputIncludes: "dist/**", // Copy and restore all files in the "build" directory
+            clearBeforeRestore: "dist", // Clear the "build" directory before restoring from the cache
+            environmentVariableIncludes: "VITE.*", // Rebuild when any environment variable with the prefix "VITE" changes
+        },
+        {
+            scriptName: "dummy-echo",
+            workspaceDependencyConfig: "ignore-all-workspace-dependencies",
+        },
+    ],
+    cacheConfigs: {
+        nexus: {
+            host: "http://localhost:8081",
+        },
     },
-    {
-      "scriptName": "dummy-echo",
-      "workspaceDependencyConfig": "ignore-all-workspace-dependencies"
-    },
-  ],
-  "cacheConfigs": {
-    "nexus": {
-      "host": "http://localhost:8081"
-    }
-  }
 }
