--- a/dummy-packages/yarn-scripts-cache-dummy-app/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "@rgischk/yarn-scripts-cache-dummy-app",
-  "version": "4.7.0",
-  "type": "module",
-  "dependencies": {
-    "@rgischk/yarn-scripts-cache-dummy-lib": "workspace:*",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.0.11"
-  },
-  "scripts": {
-    "dummy-start": "vite",
-    "dummy-build": "tsc -b && vite build",
-    "dummy-lint": "eslint .",
-    "dummy-serve": "vite preview",
-    "dummy-echo": "echo Hello World!"
-  }
+    "name": "@rgischk/yarn-scripts-cache-dummy-app",
+    "version": "4.7.0",
+    "type": "module",
+    "dependencies": {
+        "@rgischk/yarn-scripts-cache-dummy-lib": "workspace:*",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.19.0",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.19.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.18",
+        "globals": "^15.14.0",
+        "typescript": "~5.7.3",
+        "typescript-eslint": "^8.22.0",
+        "vite": "^6.0.11"
+    },
+    "scripts": {
+        "dummy-start": "vite",
+        "dummy-build": "tsc -b && vite build",
+        "dummy-serve": "vite preview",
+        "dummy-echo": "echo Hello World!",
+        "dummy-lint": "eslint . && prettier . --check",
+        "dummy-format": "prettier . --write"
+    }
 }
