--- a/dummy-packages/yarn-scripts-cache-dummy-lib/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-lib/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "@rgischk/yarn-scripts-cache-dummy-lib",
-  "type": "module",
-  "exports": "./bin/index.js",
-  "version": "4.7.0",
-  "devDependencies": {
-    "@types/node": "^22.13.0",
-    "typescript": "~5.7.3"
-  },
-  "scripts": {
-    "dummy-build": "tsc"
-  },
-  "dependencies": {
-    "@rgischk/yarn-scripts-cache-dummy-lib2": "workspace:*"
-  }
+    "name": "@rgischk/yarn-scripts-cache-dummy-lib",
+    "type": "module",
+    "exports": "./bin/index.js",
+    "version": "4.7.0",
+    "devDependencies": {
+        "@types/node": "^22.13.0",
+        "typescript": "~5.7.3"
+    },
+    "scripts": {
+        "dummy-build": "tsc",
+        "dummy-lint": "prettier . --check",
+        "dummy-format": "prettier . --write"
+    },
+    "dependencies": {
+        "@rgischk/yarn-scripts-cache-dummy-lib2": "workspace:*"
+    }
 }
