--- a/dummy-packages/yarn-scripts-cache-dummy-lib2/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-lib2/package.json
@@ -5,6 +5,7 @@
     "version": "4.7.0",
     "devDependencies": {
         "@types/node": "^22.13.0",
+        "prettier": "^3.4.2",
         "typescript": "~5.7.3"
     },
     "scripts": {
