--- a/dummy-packages/yarn-scripts-cache-dummy-project/package.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-project/package.json
@@ -6,6 +6,7 @@
     "devDependencies": {
         "@types/node": "^22.13.0",
         "copyfiles": "^2.4.1",
+        "prettier": "^3.4.2",
         "typescript": "~5.7.3"
     },
     "scripts": {
