New configuration option to ignore concurrent modifications

--- a/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json5
+++ b/dummy-packages/yarn-scripts-cache-dummy-app/.yarn-scripts-cache-rc.json5
@@ -12,6 +12,19 @@
             scriptName: "dummy-echo",
             workspaceDependencyConfig: "ignore-all-workspace-dependencies",
         },
+        {
+            scriptName: "dummy-format",
+            inputIncludes: "**",
+            inputExcludes: ["dist/**", "node_modules/**"],
+            workspaceDependencyConfig: "ignore-all-workspace-dependencies",
+            ignoreConcurrentModifications: true,
+        },
+        {
+            scriptName: "dummy-lint",
+            inputIncludes: "**",
+            inputExcludes: ["dist/**", "node_modules/**"],
+            workspaceDependencyConfig: "ignore-all-workspace-dependencies",
+        },
     ],
     cacheConfigs: {
         nexus: {
