--- a/dummy-packages/yarn-scripts-cache-dummy-lib/.yarn-scripts-cache-rc.json5
+++ b/dummy-packages/yarn-scripts-cache-dummy-lib/.yarn-scripts-cache-rc.json5
@@ -7,6 +7,19 @@
             outputIncludes: "bin/**",
             clearBeforeRestore: "bin",
         },
+        {
+            scriptName: "dummy-format",
+            inputIncludes: "**",
+            inputExcludes: ["dist/**", "node_modules/**"],
+            workspaceDependencyConfig: "ignore-all-workspace-dependencies",
+            ignoreConcurrentModifications: true,
+        },
+        {
+            scriptName: "dummy-lint",
+            inputIncludes: "**",
+            inputExcludes: ["dist/**", "node_modules/**"],
+            workspaceDependencyConfig: "ignore-all-workspace-dependencies",
+        },
     ],
     cacheConfigs: {
         nexus: {
