--- a/dummy-packages/yarn-scripts-cache-dummy-project/.yarn-scripts-cache-rc.json
+++ b/dummy-packages/yarn-scripts-cache-dummy-project/.yarn-scripts-cache-rc.json
@@ -6,6 +6,19 @@
             "inputExcludes": "bin/**",
             "outputIncludes": "bin/**",
             "clearBeforeRestore": "bin"
+        },
+        {
+            "scriptName": "dummy-format",
+            "inputIncludes": "**",
+            "inputExcludes": ["dist/**", "node_modules/**"],
+            "workspaceDependencyConfig": "ignore-all-workspace-dependencies",
+            "ignoreConcurrentModifications": true
+        },
+        {
+            "scriptName": "dummy-lint",
+            "inputIncludes": "**",
+            "inputExcludes": ["dist/**", "node_modules/**"],
+            "workspaceDependencyConfig": "ignore-all-workspace-dependencies"
         }
     ],
     "cacheConfigs": {
