Introduce statistics service to collect information about cache usage.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -15,5 +15,7 @@ plugins:
     spec: "@yarnpkg/plugin-scripts-cache-file"
   - path: ./packages/yarn-plugin-scripts-cache-nexus/bundles/@yarnpkg/plugin-scripts-cache-nexus.js
     spec: "@yarnpkg/plugin-scripts-cache-nexus"
+  - path: ./packages/yarn-plugin-scripts-cache-remote-statistics-client/bundles/@yarnpkg/plugin-scripts-cache-remote-statistics-client.js
+    spec: "@yarnpkg/plugin-scripts-cache-remote-statistics-client"
 
 yarnPath: .yarn/releases/yarn-4.6.0.cjs
